# password-manager

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-and-test.yml  build-macos.yml  run-tests.yml
PasswordManager/: main.py
PasswordManager/resources/: logo.icns
src/: main.py
tests/: test_import.py
