[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PasswordManager"
version = "1.0.1"
description = "An encrypted password manager made with Python for Windows and Mac."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Samuel Balcells", email = "samuel.sbv3@gmail.com"}
]
dependencies = [
    "cffi",
    "cryptography",
    "pycparser",
    "setuptools",
    "pytest",
    "pyinstaller"
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests"]

[tool.setuptools.package-data]
PasswordManager = ["resources/logo.png", "resources/logo.ico", "resources/logo.icns"]

[tool.pyinstaller]
name = "PasswordManager"
script = "PasswordManager/main.py"
